Using form layout for form pages

--- a/_pages/en/open-source-code-form.html
+++ b/_pages/en/open-source-code-form.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: form
 ref: codeForm
 lang: en
 permalink: /en/open-source-code-form.html
+config: config-code
+id: code
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for open source code</h1>
 <p>Click <a href="open-source-code-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
-
-{% include codeForm.html %}
