--- a/_pages/fr/code-source-ouvert-formulaire.html
+++ b/_pages/fr/code-source-ouvert-formulaire.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: form
 ref: codeForm
 lang: fr
 permalink: /fr/code-source-ouvert-formulaire.html
+config: config-code
+id: code
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation du code source ouvert</h1>
 <p>Appuyez <a href="code-source-ouvert-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
-
-{% include codeForm.html %}
