Added administration form page and components

--- a/_pages/en/admin-form.html
+++ b/_pages/en/admin-form.html
@@ -1,11 +1,11 @@
 ---
-layout: default
+layout: form
 ref: adminForm
 lang: en
 permalink: /en/admin-form.html
+config: config-admin
+id: admin
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for organizations</h1>
 <p>Click <a href="open-source-code-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
-
-{% include adminForm.html %}
