--- a/_pages/en/open-standards-schema.html
+++ b/_pages/en/open-standards-schema.html
@@ -9,6 +9,8 @@ permalink: /en/open-standards-schema.html
 <p>The metadata schema for <a href="./open-standards.html">Open Standards</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
-<h2>Version "~"</h2>
+<h2>Version 1.0</h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
-<p>We've created an <a href="#" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
+<p>We've created an <a href="http://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/standards_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
+
+{% include standardsSchema.html %}
