--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -9,6 +9,8 @@ permalink: /fr/normes-ouvertes-schema.html
 <p>Le schéma de métadonnées pour les <a href="./normes-ouvertes.html">les normes ouvertes</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
-<h2>Version "~" </h2>
+<h2>Version 1.0</h2>
 <p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
-<p>Nous avons créé un <a href="#" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
+<p>Nous avons créé un <a href="http://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/standards_mandatory.yml" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
+
+{% include standardsSchema.html %}
