--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -6,6 +6,11 @@ permalink: /fr/normes-ouvertes.html
 ---
 
 <h1 property="name" id="wb-cont">Normes ouvertes</h1>
-<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada. Les données sont aussi disponible en <a href="../normes_ouvertes-open_standards.json" target="_blank">format JSON</a>.</p>
+<p>Standards libres des administrations publiques Canadiennes.</p>
+<p>Consultez la <a href="./docs.html">Documentation</a> et le <a href="./normes-ouvertes-schema.html">Schéma de métadonnées des normes ouvertes</a> pour la liste des champs et comment ajouter vos données.</p>
 
-{% include openStandardsTable.html %}
+{% include standardsTable.html %}
+
+<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
+<p>Vous pouvez utiliser le <a href="./normes-ouvertes-formulaire.html">Formulaire des normes ouvertes</a> pour mettre à jours des données existantes.</p>
+<p>Les données sont aussi disponible en <a href="../normes_ouvertes-open_standards.json" target="_blank">format JSON</a>.</p>
