Features/admin form (#321)
* fix errors code form

* Minor fixes

* Fixes : yaml data from forms & id errors

* Formatting dates as date instead of string in _data/code

* Formatting dates as date instead of string in _data/logiciel

* Formatting dates as date instead of string in _data/normes

* Changed date to day from testing'

* Fix yamale errors

* Added administration form page and components

* fix build

* Changed name translation (value -> option) for better consistency

* Adding comment & yml format

* Added select widget

* Added select widget & updated documentation

* Correction in form documentation

* fixed build

*  fixed build

--- a/_pages/fr/admin-formulaire.html
+++ b/_pages/fr/admin-formulaire.html
@@ -1,11 +1,10 @@
 ---
-layout: default
+layout: form
 ref: adminForm
 lang: fr
 permalink: /fr/admin-formulaire.html
+config: config-admin
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation des organisations</h1>
 <p>Appuyez <a href="code-source-ouvert-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
-
-{% include adminForm.html %}
