--- a/_pages/fr/logiciels-libres-formulaire.html
+++ b/_pages/fr/logiciels-libres-formulaire.html
@@ -7,5 +7,5 @@ config: config-oss
 id: oss
 ---
 
-<h1 property="name" id="wb-cont">Formulaire avec validation du code source ouvert</h1>
-<p>Appuyez <a href="code-source-ouvert-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour le code source ouvert.</p>
+<h1 property="name" id="wb-cont">Formulaire avec validation de logiciels libres ouverts</h1>
+<p>Appuyez <a href="logiciels-libres-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouverts.</p>
