--- a/_pages/en/open-source-code-schema.html
+++ b/_pages/en/open-source-code-schema.html
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: schema
 ref: codeSchema
 lang: en
 permalink: /en/open-source-code-schema.html
+config: config-code
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code Metadata Schema</h1>
@@ -11,5 +12,3 @@ permalink: /en/open-source-code-schema.html
 <h2>Version 1.0</h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/code_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
-
-{% include codeSchema.html %}
