--- a/_pages/en/open-standards-schema.html
+++ b/_pages/en/open-standards-schema.html
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: schema
 ref: openstandardsSchema
 lang: en
 permalink: /en/open-standards-schema.html
+config: config-standards
 ---
 
 <h1 property="name" id="wb-cont">Metadata Schema for Open Standards</h1>
@@ -12,5 +13,3 @@ permalink: /en/open-standards-schema.html
 <h2>Version 1.0</h2>
 <p>Mandatory fields are marked with "<span class="bg-primary">mandatory</span>".</p>
 <p>We've created an <a href="http://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/standards_mandatory.yml" target="_blank">example file</a> with only mandatory fields you can use to get started.</p>
-
-{% include standardsSchema.html %}
