--- a/_pages/fr/logiciels-libres-schema.html
+++ b/_pages/fr/logiciels-libres-schema.html
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: schema
 ref: ossSchema
 lang: fr
 permalink: /fr/logiciels-libres-schema.html
+config: config-oss
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour logiciels libres ouverts</h1>
@@ -12,5 +13,3 @@ permalink: /fr/logiciels-libres-schema.html
 <h2>Version 1.0 </h2>
 <p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
 <p>Nous avons créé un <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/ll-oss_mandatory.yml" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
-
-{% include ossSchema.html %}
