--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -1,8 +1,9 @@
 ---
-layout: default
+layout: schema
 ref: openstandardsSchema
 lang: fr
 permalink: /fr/normes-ouvertes-schema.html
+config: config-standards
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour les normes ouvertes</h1>
@@ -12,5 +13,3 @@ permalink: /fr/normes-ouvertes-schema.html
 <h2>Version 1.0</h2>
 <p>Les champs obligatoires sont marqués avec "<span class="bg-primary">obligatoire</span>".</p>
 <p>Nous avons créé un <a href="http://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/standards_mandatory.yml" target="_blank">fichier exemple</a> avec seulement les champs obligatoires que vous pouvez utiliser pour commencer.</p>
-
-{% include standardsSchema.html %}
