--- a/_pages/en/open-source-code.html
+++ b/_pages/en/open-source-code.html
@@ -8,7 +8,7 @@ permalink: /en/open-source-code.html
 <h1 property="name" id="wb-cont">Open Source Code</h1>
 <p>Canadian public administrations' open source projects and code repositories.</p>
 <p>See the list of <a href="./open-source-code-groups.html">Open Source Code Groups</a> to find more Canadian public administrations' open source projects and code repositories.</p>
-<p>See the <a href="./docs.html">Documentation</a> and <a href="./open-source-code-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
+<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-source-code-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
 
 {% include codeTable.html %}
 
