--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -7,7 +7,7 @@ permalink: /fr/logiciels-libres.html
 
 <h1 property="name" id="wb-cont">Logiciels libres</h1>
 <p>Logiciels libres des administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="./docs.html">Documentation</a> et le <a href="./logiciels-libres-schema.html">Schéma de métadonnées de logiciels libres ouverts</a> pour la liste des champs et comment ajouter vos données.</p>
+<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }} et le <a href="./logiciels-libres-schema.html">Schéma de métadonnées de logiciels libres ouverts</a> pour la liste des champs et comment ajouter vos données.</p>
 
 {% include ossTable.html %}
 <p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels ouverts des administrations du Canada.</p>
