--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -7,7 +7,7 @@ permalink: /fr/normes-ouvertes.html
 
 <h1 property="name" id="wb-cont">Normes ouvertes</h1>
 <p>Standards libres des administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="./docs.html">Documentation</a> et le <a href="./normes-ouvertes-schema.html">Schéma de métadonnées des normes ouvertes</a> pour la liste des champs et comment ajouter vos données.</p>
+<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }} et le <a href="./normes-ouvertes-schema.html">Schéma de métadonnées des normes ouvertes</a> pour la liste des champs et comment ajouter vos données.</p>
 
 {% include standardsTable.html %}
 
