--- a/_pages/en/open-source-software.html
+++ b/_pages/en/open-source-software.html
@@ -7,7 +7,7 @@ permalink: /en/open-source-software.html
 
 <h1 property="name" id="wb-cont">Open Source Software</h1>
 <p>Canadian public administrations' open source software.</p>
-<p>See the <a href="./docs.html">Documentation</a> and <a href="./open-source-software-schema.html">Open Source Software Metadata Schema</a> for the list of fields and how to add you data.</p>
+<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }} and <a href="./open-source-software-schema.html">Open Source Software Metadata Schema</a> for the list of fields and how to add you data.</p>
 
 {% include ossTable.html %}
 
