--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -7,7 +7,7 @@ config: config-standards
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour les normes ouvertes</h1>
-<p>Le schéma de métadonnées pour les <a href="./normes-ouvertes.html">les normes ouvertes</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0</h2>
