--- a/_pages/en/open-source-software-schema.html
+++ b/_pages/en/open-source-software-schema.html
@@ -7,7 +7,7 @@ config: config-oss
 ---
 
 <h1 property="name" id="wb-cont">Metadata Schema for Open Source Software</h1>
-<p>The metadata schema for <a href="{{ site.data.i18n.general.nav.oss.link }}">{{ site.data.18n.general.head.nav.oss[page.lang] }}</a>.</p>
+<p>The metadata schema for <a href="{{ site.data.i18n.general.nav.oss.link }}">{{ site.data.i18n.general.head.nav.oss[page.lang] }}</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0 </h2>
