--- a/_pages/fr/logiciels-libres-schema.html
+++ b/_pages/fr/logiciels-libres-schema.html
@@ -7,7 +7,7 @@ config: config-oss
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour logiciels libres ouverts</h1>
-<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.oss.link }}">{{ site.data.18n.general.head.nav.oss[page.lang] }}</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.oss.link }}">{{ site.data.i18n.general.head.nav.oss[page.lang] }}</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0 </h2>
