--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -43,7 +43,7 @@ permalink: /fr/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</h3>
+          <h3><a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a></h3>
           <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
         </section>
       </div>
