--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -43,7 +43,7 @@ permalink: /en/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</h3>
+          <h3><a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a></h3>
           <p>Find out how to contribute using a standard metadata schema for each service.</p>
         </section>
       </div>
