--- a/_pages/fr/code-source-ouvert.html
+++ b/_pages/fr/code-source-ouvert.html
@@ -8,7 +8,7 @@ permalink: /fr/code-source-ouvert.html
 <h1 property="name" id="wb-cont">Code source ouvert</h1>
 <p>Projets libres et dépôts de code des administrations publiques Canadiennes.</p>
 <p>Consultez la liste des <a href="./code-source-ouvert-groupes.html">Groupes de code source ouvert</a> pour trouver plus de projets libres et dépôts de code source ouvert d'administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }} et le <a href="./code-source-ouvert-schema.html">Schéma de métadonnées du code source ouvert</a> pour la liste des champs et comment ajouter vos données.</p>
+<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./code-source-ouvert-schema.html">Schéma de métadonnées du code source ouvert</a> pour la liste des champs et comment ajouter vos données.</p>
 
 {% include codeTable.html %}
 
