--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -29,7 +29,7 @@ permalink: /en/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></h3>
+          <h3><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a></h3>
           <p>Search open source software used by Canadian public administrations, promote collaboration and reuse of preferred solutions.</p>
         </section>
       </div>
