--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -29,7 +29,7 @@ permalink: /fr/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a></h3>
+          <h3><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a></h3>
           <p>Effectuez des recherches dans les logiciels libres utilisés par les administrations publiques Canadiennes, promouvez la collaboration et la réutilisation de solutions préférées.</p>
         </section>
       </div>
