--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -16,58 +16,111 @@ permalink: /en/index.html
   </div>
 </div>
 
-<div class="row">
-  <section class="col-md-8 pull-left">
-    <h2>Services and information</h2>
-    <div class="wb-eqht row">
-      <div class="col-md-6">
-        <section>
-          <h3><a href="./open-source-code.html">Open Source Code</a></h3>
-          <p>Search Canadian public administrations' open source projects and code repositories, get access to code and software, and contribute to ongoing development.</p>
-        </section>
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name" id="wb-cont">Services</h1>
+    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to pubilically accessible items that are freely available for use.</p>
+  </div>
+
+  <div class="col-md-4">
+    <section class="panel panel-info">
+
+      <header class="panel-heading">
+        <h5 class="panel-title">Open Source Code</h5>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 33px !important">
+        <div class="col-md-3" style="color: #31708f; font-size: 50px">
+          <i class="glyphicon glyphicon-cog"></i>
+        </div>
+        <div class="col-md-9">
+          <p>Search open source projects and code repositories.</p>
+        </div>
       </div>
 
-      <div class="col-md-6">
-        <section>
-          <h3><a href="./open-source-software.html">Open Source Software</a></h3>
-          <p>Search open source software used by Canadian public administrations, promote collaboration and reuse of preferred solutions.</p>
-        </section>
-      </div>
-
-      <div class="col-md-6">
-        <section>
-          <h3><a href="./open-standards.html">Open Standards</a></h3>
-          <p>Search open standards used by Canadian public administrations.</p>
-        </section>
-      </div>
-
-      <div class="col-md-6">
-        <section>
-          <h3><a href="./docs.html">Documentation</a></h3>
-          <p>Find out how to contribute using a standard metadata schema for each service.</p>
-        </section>
-      </div>
-
-    </div>
-  </section>
-
-  <div class="col-md-4 col-xs-12 pull-right">
-    <section class="lnkbx">
-      <h2>Latest Open Source Codes</h2>
-      {% include codeLastUpdated.html %}
     </section>
+  </div>
 
-    <section class="lnkbx">
-      <h2>Featured Working Groups</h2>
-      <ul>
-        <li><a href="https://gccollab.ca/groups/profile/5911">Open Source Software group on GCcollab</a></li>
-        <li><a href="#">[Working Group name]</a></li>
-        <li><a href="#">[Working Group name]</a></li>
-      </ul>
+  <div class="col-md-4">
+    <section class="panel panel-success">
+      <header class="panel-heading">
+        <h5 class="panel-title">Open Source Software</h5>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 0px !important">
+        <div class="col-md-3" style="color: #3c763d; font-size: 50px">
+          <i class="glyphicon glyphicon-cog"></i>
+        </div>
+        <div class="col-md-9">
+          <p>Search open source software platforms used by Canadian public administrators.</p>
+        </div>
+      </div>
+
     </section>
+  </div>
 
+  <div class="col-md-4">
+    <section class="panel panel-warning">
+
+      <header class="panel-heading">
+        <h5 class="panel-title">Open Source Standards</h5>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 33px !important">
+        <div class="col-md-3" style="color: #8a6d3b; font-size: 50px">
+          <i class="glyphicon glyphicon-list-alt"></i>
+        </div>
+        <div class="col-md-9">
+          <p>Search open standards used by Canadian public administrators.</p>
+        </div>
+      </div>
+
+    </section>
   </div>
 </div>
+
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name" id="wb-cont">Documentation</h1>
+  </div>
+</div>
+
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name" id="wb-cont">Learn More</h1>
+  </div>
+  <div class="col-md-12">
+    <div class="wb-tabs ignore-session" style="padding-top: 15px">
+      <div class="tabpanels">
+        <details id="details-panel10">
+          <summary>About Us</summary>
+          <p>
+            The Open Resource Exchange ...
+          </p>
+        </details>
+        <details id="details-panel20">
+          <summary>Our Goals</summary>
+          <p>
+            ...
+          </p>
+        </details>
+        <details id="details-panel20">
+          <summary>Our Partners</summary>
+          <p>
+            ...
+          </p>
+        </details>
+        <details id="details-panel20">
+          <summary>Contact Us</summary>
+          <p>
+            ...
+          </p>
+        </details>
+      </div>
+    </div>
+  </div>
+</div>
+
 
 <div class="pagedetails">
   <div class="row">
