--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -67,7 +67,7 @@ permalink: fr/docs.html
     name: 
       en: "Example"
       fr: "Exemple"
-    licenses:
+    licence:
       - 
         URL: 
           en: "https://example.com/repo/example/LICENCE-en"
