--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -55,31 +55,31 @@ permalink: /en/docs.html
 
 <pre>
   <code>
-  - 
-    contact: 
+  -
+    contact:
       email: "abc@xyz.com"
-    date: 
+    date:
       created: "YYYY-MM-DD"
-      metadataLastUpdated: "YYYY-MM-DD"  
-    description: 
+      metadataLastUpdated: "YYYY-MM-DD"
+    description:
       en: "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
       fr: "Quisque bibendum ante ligula, porta vestibulum enim egestas vel."
-    name: 
+    name:
       en: "Example"
       fr: "Exemple"
-    licence:
-      - 
-        URL: 
+    licences:
+      -
+        URL:
           en: "https://example.com/repo/example/LICENCE-en"
           fr: "https://example.com/repo/example/LICENCE-fr"
         spdxID: "XYZ-1.0"
-    repositoryURL: 
+    repositoryURL:
       en: "https://example.com/repo/example"
       fr: "https://example.com/repo/example"
-    tags: 
-      en: 
+    tags:
+      en:
         - "tag1-en"
-      fr: 
+      fr:
         - "tag1-fr"
   </code>
 </pre>
