--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -9,7 +9,7 @@ permalink: /en/open-standards.html
 <p>Canadian public administrations' open standards.</p>
 <p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-standards-schema.html">Open Standards Metadata Schema</a> for the list of fields and how to add your data.</p>
 
-{% include standardsTable.html %}
+{% include standardTable.html %}
 
 <p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
 <p>You can use the <a href="./open-standards-form.html">Open Standards Form</a> to update existing data.</p>
