Software updated w/ new DB

--- a/_pages/en/open-source-software-form.html
+++ b/_pages/en/open-source-software-form.html
@@ -1,10 +1,9 @@
 ---
 layout: form
-ref: ossForm
+ref: softwareForm
 lang: en
 permalink: /en/open-source-software-form.html
-config: config-oss
-id: oss
+config: config-software
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for open source software</h1>
