--- a/_pages/fr/logiciels-libres-formulaire.html
+++ b/_pages/fr/logiciels-libres-formulaire.html
@@ -1,10 +1,9 @@
 ---
 layout: form
-ref: ossForm
+ref: softwareForm
 lang: fr
 permalink: /fr/logiciels-libres-formulaire.html
-config: config-oss
-id: oss
+config: config-software
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation de logiciels libres ouverts</h1>
