--- a/_pages/fr/logiciels-libres-schema.html
+++ b/_pages/fr/logiciels-libres-schema.html
@@ -1,13 +1,13 @@
 ---
 layout: schema
-ref: ossSchema
+ref: softwareSchema
 lang: fr
 permalink: /fr/logiciels-libres-schema.html
-config: config-oss
+config: config-software
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour logiciels libres ouverts</h1>
-<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.software.link[page.lang] }}">{{ site.data.i18n.general.nav.software[page.lang] }}</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0 </h2>
