--- a/_pages/en/open-source-code-form.html
+++ b/_pages/en/open-source-code-form.html
@@ -6,5 +6,6 @@ permalink: /en/open-source-code-form.html
 config: config-code
 ---
 
-<h1 property="name" id="wb-cont">Form with validation for open source code</h1>
-<p>Click <a href="open-source-code-schema.html">here</a> to know more informations about the metadata schema for open source code.</p>
+<h1 property="name" id="wb-cont">Open Source Code Form</h1>
+<p>Fill out this form to add or update information on open source projects and code repositories done by Canadian public administrations. 
+   For more information, you can also check the latest version of the metadata schema for open source code.</p>
