Improved Breadcrumbs section

--- a/_pages/en/open-standards-form.html
+++ b/_pages/en/open-standards-form.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-ref: standardsForm
+ref: standardForm
 lang: en
 permalink: /en/open-standards-form.html
 config: config-standards
