--- a/_pages/fr/normes-ouvertes-formulaire.html
+++ b/_pages/fr/normes-ouvertes-formulaire.html
@@ -1,6 +1,6 @@
 ---
 layout: form
-ref: standardsForm
+ref: standardForm
 lang: fr
 permalink: /fr/normes-ouvertes-formulaire.html
 config: config-standards
