Renamed standards --> standards && license --> licence

--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -36,7 +36,7 @@ permalink: /fr/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a></h3>
+          <h3><a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></h3>
           <p>Effectuez des recherches dans les normes ouvertes utilisés par les administrations publiques Canadiennes.</p>
         </section>
       </div>
