--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -12,4 +12,4 @@ permalink: /fr/logiciels-libres.html
 
 <p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels ouverts des administrations du Canada.</p>
 <p>Vous pouvez utiliser le <a href="logiciels-libres-formulaire.html">Formulaire de logiciels libres ouverts</a> pour mettre à jours des données existantes.</p>
-<p>Les données sont aussi rendu disponible en <a href="../logiciels_libres-open_source_software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
+<p>Les données sont aussi rendu disponible en <a href="../software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
