--- a/_pages/en/open-standards-form.html
+++ b/_pages/en/open-standards-form.html
@@ -2,8 +2,8 @@
 layout: form
 ref: standardForm
 lang: en
-permalink: /en/open-standards-form.html
-config: config-standards
+permalink: /en/open-standard-form.html
+config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for open standards</h1>
