--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -2,7 +2,7 @@
 layout: default
 ref: standard
 lang: en
-permalink: /en/open-standards.html
+permalink: /en/open-standard.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
@@ -10,6 +10,6 @@ permalink: /en/open-standards.html
 
 {% include standardTable.html %}
 
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
-<p>You can use the <a href="./open-standards-form.html">Open Standards Form</a> to update existing data.</p>
-<p>Data is also made available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
+<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations.</p>
+<p>You can use the <a href="./open-standard-form.html">Open Standards Form</a> to update existing data.</p>
+<p>Data is also made available in <a href="../standard.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
