--- a/_pages/fr/normes-ouvertes-formulaire.html
+++ b/_pages/fr/normes-ouvertes-formulaire.html
@@ -3,7 +3,7 @@ layout: form
 ref: standardForm
 lang: fr
 permalink: /fr/normes-ouvertes-formulaire.html
-config: config-standards
+config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation des normes ouvertes</h1>
