--- a/_pages/en/open-standards-form.html
+++ b/_pages/en/open-standards-form.html
@@ -2,7 +2,7 @@
 layout: form
 ref: standardForm
 lang: en
-permalink: /en/open-standard-form.html
+permalink: /en/open-standards-form.html
 config: config-standard
 ---
 
