Update some fields in open Source Code Form according to new design

--- a/_pages/en/open-source-code-form.html
+++ b/_pages/en/open-source-code-form.html
@@ -7,5 +7,4 @@ config: config-code
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code Form</h1>
-<p>Fill out this form to add or update information on open source projects and code repositories done by Canadian public administrations. 
-   For more information, you can also check the latest version of the metadata schema for open source code.</p>
+<p>Fill out this form to add or update information on open source projects and code repositories done by Canadian public administrations. </p>
