--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -99,7 +99,7 @@ permalink: fr/docs.html
 <h3 id="Ajouter_des_logiciels_libres">Ajouter des logiciels libres</h3>
 
 <h4 id="Le_logiciel_est_deja_la">Le logiciel est déjà là</h4>
-<p>S'il existe déjà un fichier pour le logiciel libre que vous utilisez dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>, vous devez vérifier si votre administration est déjà répertoriée comme utilisant le logiciel libre.</p>
+<p>S'il existe déjà un fichier pour le logiciel libre que vous utilisez dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a>, vous devez vérifier si votre administration est déjà répertoriée comme utilisant le logiciel libre.</p>
 
 <p>Si ce n'est pas le cas, vous pouvez copier ce qui suit au bas du fichier, et changer les informations pour votre administration et l'utilisation du logiciel open source. Ce ne sont que les champs obligatoires.</p>
 
@@ -140,8 +140,8 @@ permalink: fr/docs.html
 
 <h4 id="Votre_logiciel_open_source_doit_etre_ajoute">Votre logiciel open source doit être ajouté</h4>
 <p>
-    Si votre logiciel open source n'a pas de fichier dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a>
-    vous devez créer un nouveau fichier pour le logiciel open source. Utilisez le modèle <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
+    Si votre logiciel open source n'a pas de fichier dans le répertoire <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a>
+    vous devez créer un nouveau fichier pour le logiciel open source. Utilisez le modèle <a href="https://github.com/canada-ca/ore-ero/blob/master/_data_templates/software_mandatory.yml">software template with only mandatory fields</a>.
 </p>
 
 <h2 id="Structure_du_repertoire">Structure du répertoire</h2>
