--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -99,7 +99,7 @@ permalink: /en/docs.html
 <h3 id="adding_open_source_software">Adding Open Source Software</h3>
 
 <h4 id="the_software_is_already_there">The software is already there</h4>
-<p>If there is already a file for the open source software you are using under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, you need to check if your adminstration is already listed as using the open source software.</p>
+<p>If there is already a file for the open source software you are using under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a> directory, you need to check if your adminstration is already listed as using the open source software.</p>
 
 <p>If not, you can copy the following at the bottom of the file, and change the informtion for your adminstration and use of the open source software. These are only the mandatory fields.</p>
 
@@ -140,8 +140,8 @@ permalink: /en/docs.html
 
 <h4 id="your_open_source_software_needs_to_be_added">Your open source software needs to be added</h4>
 <p>
-  If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/logiciels_libres-open_source_software">logiciels_libres-open_source_software</a> directory, 
-  you need to create a new file for the open source software. Use the <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/ll-oss_mandatory.yml">ll-oss template with only mandatory fields</a>.
+  If your open source software does'nt have a file under the <a href="https://github.com/canada-ca/ore-ero/tree/master/_data/software">software</a> directory, 
+  you need to create a new file for the open source software. Use the <a href="https://raw.githubusercontent.com/canada-ca/ore-ero/master/_data_templates/software_mandatory.yml">software template with only mandatory fields</a>.
 </p>
 
 <h2 id="directory_structure">Directory structure</h2>
