--- a/_pages/en/open-standards-form.html
+++ b/_pages/en/open-standards-form.html
@@ -3,7 +3,7 @@ layout: form
 ref: standardsForm
 lang: en
 permalink: /en/open-standards-form.html
-config: config-standards
+config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Form with validation for open standards</h1>
