--- a/_pages/fr/logiciels-libres.html
+++ b/_pages/fr/logiciels-libres.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-ref: oss
+ref: software
 lang: fr
 permalink: /fr/logiciels-libres.html
 ---
@@ -9,7 +9,8 @@ permalink: /fr/logiciels-libres.html
 <p>Logiciels libres des administrations publiques Canadiennes.</p>
 <p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./logiciels-libres-schema.html">Schéma de métadonnées de logiciels libres ouverts</a> pour la liste des champs et comment ajouter vos données.</p>
 
-{% include ossTable.html %}
+{% include softwareTable.html %}
+
 <p>Les données utilisées pour générer cette liste sont hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les logiciels ouverts des administrations du Canada.</p>
 <p>Vous pouvez utiliser le <a href="logiciels-libres-formulaire.html">Formulaire de logiciels libres ouverts</a> pour mettre à jours des données existantes.</p>
-<p>Les données sont aussi rendu disponible en <a href="../logiciels_libres-open_source_software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
+<p>Les données sont aussi rendu disponible en <a href="../software.json" target="_blank">format JSON</a> pour utilisation dans d'autres applications.</p>
