--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -13,4 +13,4 @@ permalink: /fr/normes-ouvertes.html
 
 <p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
 <p>Vous pouvez utiliser le <a href="./normes-ouvertes-formulaire.html">Formulaire des normes ouvertes</a> pour mettre à jours des données existantes.</p>
-<p>Les données sont aussi disponible en <a href="../normes_ouvertes-open_standards.json" target="_blank">format JSON</a>.</p>
+<p>Les données sont aussi disponible en <a href="../standard.json" target="_blank">format JSON</a>.</p>
