--- a/_pages/fr/normes-ouvertes-schema.html
+++ b/_pages/fr/normes-ouvertes-schema.html
@@ -1,6 +1,6 @@
 ---
 layout: schema
-ref: openstandardsSchema
+ref: standardsSchema
 lang: fr
 permalink: /fr/normes-ouvertes-schema.html
 config: config-standards
