--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-ref: Docs
+ref: docs
 lang: fr
 permalink: fr/docs.html
 ---
@@ -26,8 +26,8 @@ permalink: fr/docs.html
             <ul>
               <li><a href="#administrations">Administrations</a></li>
               <li><a href="#code">Code</a></li>
-              <li><a href="#logiciels_libres-open_source_software">Logiciels_libres-open_source_software</a></li>
-              <li><a href="#normes_ouvertes-open_standards">Normes_ouvertes-open_standards</a></li>
+              <li><a href="#software">software</a></li>
+              <li><a href="#standard">standard</a></li>
             </ul>
           </li>
         </ul>
@@ -157,8 +157,8 @@ permalink: fr/docs.html
   <li>municipal</li>    
 </ul>
 
-<h3 id="logiciels_libres-open_source_software">Logiciels_libres-open_source_software</h3>
+<h3 id="software">Software</h3>
 <p>Liste des logiciels libres utilisés par les administrations.</p>
 
-<h3 id="normes_ouvertes-open_standards">Normes_ouvertes-open_standards</h3> 
+<h3 id="standard">Standard</h3> 
 <p>Liste des normes ouvertes approuvées ou utilisées par les administrations.</p>
