--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-ref: standards
+ref: standard
 lang: fr
 permalink: /fr/normes-ouvertes.html
 ---
@@ -9,7 +9,7 @@ permalink: /fr/normes-ouvertes.html
 <p>Standards libres des administrations publiques Canadiennes.</p>
 <p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./normes-ouvertes-schema.html">Schéma de métadonnées des normes ouvertes</a> pour la liste des champs et comment ajouter vos données.</p>
 
-{% include standardsTable.html %}
+{% include standardTable.html %}
 
 <p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
 <p>Vous pouvez utiliser le <a href="./normes-ouvertes-formulaire.html">Formulaire des normes ouvertes</a> pour mettre à jours des données existantes.</p>
