--- a/_pages/en/docs.html
+++ b/_pages/en/docs.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-ref: Docs
+ref: docs
 lang: en
 permalink: /en/docs.html
 ---
@@ -26,8 +26,8 @@ permalink: /en/docs.html
             <ul>
               <li><a href="#administrations">Administrations</a></li>
               <li><a href="#code">Code</a></li>
-              <li><a href="#logiciels_libres-open_source_software">Logiciels_libres-open_source_software</a></li>
-              <li><a href="#normes_ouvertes-open_standards">Normes_ouvertes-open_standards</a></li>
+              <li><a href="#software">Software</a></li>
+              <li><a href="#standard">Standard</a></li>
             </ul>
           </li>
         </ul>
@@ -157,8 +157,8 @@ permalink: /en/docs.html
   <li>Municipal</li>    
 </ul>
 
-<h3 id="logiciels_libres-open_source_software">Logiciels_libres-open_source_software</h3> 
+<h3 id="software">software</h3>
 <p>List of open source software used by administrations.</p>
 
-<h3 id="normes_ouvertes-open_standards">Normes_ouvertes-open_standards</h3> 
+<h3 id="standard">Standard</h3>
 <p>List open standards endorsed or used by administrations.</p>
