--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -36,7 +36,7 @@ permalink: /en/index.html
 
       <div class="col-md-6">
         <section>
-          <h3><a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a></h3>
+          <h3><a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a></h3>
           <p>Search open standards used by Canadian public administrations.</p>
         </section>
       </div>
