--- a/_pages/en/open-standard-schema.html
+++ b/_pages/en/open-standard-schema.html
@@ -1,13 +1,13 @@
 ---
 layout: schema
-ref: standardsSchema
+ref: standardSchema
 lang: en
-permalink: /en/open-standards-schema.html
+permalink: /en/open-standard-schema.html
 config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Metadata Schema for Open Standards</h1>
-<p>The metadata schema for <a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a>.</p>
+<p>The metadata schema for <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a>.</p>
 <p>Data files are hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0</h2>
