--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -1,16 +1,16 @@
 ---
 layout: default
-ref: standards
+ref: standard
 lang: en
 permalink: /en/open-standards.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
 <p>Canadian public administrations' open standards.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-standards-schema.html">Open Standards Metadata Schema</a> for the list of fields and how to add your data.</p>
+<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-standard-schema.html">Open Standards Metadata Schema</a> for the list of fields and how to add your data.</p>
 
-{% include standardsTable.html %}
+{% include standardTable.html %}
 
 <p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations.</p>
-<p>You can use the <a href="./open-standards-form.html">Open Standards Form</a> to update existing data.</p>
+<p>You can use the <a href="./open-standard-form.html">Open Standards Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../standard.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
