--- a/_pages/fr/norme-ouverte-formulaire.html
+++ b/_pages/fr/norme-ouverte-formulaire.html
@@ -1,9 +1,9 @@
 ---
 layout: form
-ref: standardsForm
+ref: standardForm
 lang: fr
 permalink: /fr/normes-ouvertes-formulaire.html
-config: config-standards
+config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation des normes ouvertes</h1>
