--- a/_pages/fr/norme-ouverte-schema.html
+++ b/_pages/fr/norme-ouverte-schema.html
@@ -1,13 +1,13 @@
 ---
 layout: schema
-ref: standardsSchema
+ref: standardSchema
 lang: fr
 permalink: /fr/normes-ouvertes-schema.html
-config: config-standards
+config: config-standard
 ---
 
 <h1 property="name" id="wb-cont">Schéma de métadonnées pour les normes ouvertes</h1>
-<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a>.</p>
+<p>Le schéma de métadonnées pour les <a href="{{ site.data.i18n.general.nav.standard.link[page.lang] }}">{{ site.data.i18n.general.nav.standard[page.lang] }}</a>.</p>
 <p>Les données sont hébergés sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>.</p>
 
 <h2>Version 1.0</h2>
