--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -2,7 +2,7 @@
 layout: default
 ref: code
 lang: en
-permalink: /en/open-source-code.html
+permalink: /en/open-source-codes.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
