--- a/_pages/fr/codes-source-ouverts.html
+++ b/_pages/fr/codes-source-ouverts.html
@@ -2,7 +2,7 @@
 layout: default
 ref: code
 lang: fr
-permalink: /fr/code-source-ouvert.html
+permalink: /fr/codes-source-ouverts.html
 ---
 
 <h1 property="name" id="wb-cont">Code source ouvert</h1>
