create documentation page -

--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -84,23 +84,25 @@ permalink: /en/index.html
     <h1 property="name" id="wb-cont">Documentation</h1>
   </div>
 
-  <div class="col-md-4">
-    <section class="panel panel-danger ">
+  <div class="col-md-12">
 
-      <header class="panel-heading">
-        <h5 class="panel-title">- - - - - </h5>
-      </header>
+    <ul class="list-unstyled">
+      <li>
+        <details open>
+          <summary>How to use the Open Resource Exchange platform</summary>
+            The Open Resource Exchange platform offers three services based on open source solutions developed and used by canadian public administrations.
+            You can check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> to help you search for open digital solutions and share new open projects.
+        </details>
+      </li>
+      <li>
+        <details open>
+          <summary>List of repositories per public administration</summary>
+            Canadian public administrations use repositories on Github, GitLab, Bitbucket or any other online service to host their open source projects.
+            Check the <a href="./open-source-code-groups.html">list of repositories per public administration</a> to find open source projects’ repositories for public administrations, according to their level of government (federal, provincial, municipal or aboriginal). 
+        </details>
+      </li>
+    </ul>
 
-      <div class="panel-body" style="padding-bottom: 33px !important">
-        <div class="col-md-3" style="color: #A94442; font-size: 50px">
-          <i class="fas fa-copy"></i>
-        </div>
-        <div class="col-md-9">
-          <p> - - - - - - - .</p>
-        </div>
-      </div>
-
-    </section>
   </div>
 </div>
 
