--- a/_pages/en/open-source-code.html
+++ b/_pages/en/open-source-code.html
@@ -6,12 +6,14 @@ permalink: /en/open-source-code.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
-<p>Canadian public administrations' open source projects and code repositories.</p>
-<p>See the list of <a href="./open-source-code-groups.html">Open Source Code Groups</a> to find more Canadian public administrations' open source projects and code repositories.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-source-code-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
+<p>
+  Open source code commonly refers to software that uses an open development process. This software is released under a license where
+  the copyright holder grants anyone permission to use, modify, change or redistribute the code for any purpose. This open source process
+  is an example of open collaboration where everyone benefits from the development of technology that solves real issues.
+  You can use the <a href="./open-source-code-form.html">Open Source Code Form</a> to update existing data.
+</p>
 
 {% include codeTable.html %}
 
 <p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian federal, provincial, territorial and municipal administrations Open Source Code.</p>
-<p>You can use the <a href="./open-source-code-form.html">Open Source Code Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../code.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
