--- a/_pages/en/index.html
+++ b/_pages/en/index.html
@@ -18,7 +18,7 @@ permalink: /en/index.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name" id="wb-cont">Services</h1>
+    <h1 property="name">Services</h1>
     <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to pubilically accessible items that are freely available for use.</p>
   </div>
 
@@ -81,7 +81,7 @@ permalink: /en/index.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name" id="wb-cont">Documentation</h1>
+    <h1 property="name">Documentation</h1>
   </div>
 
   <div class="col-md-12">
@@ -108,7 +108,7 @@ permalink: /en/index.html
 
 <div class="row profile">
   <div class="col-md-12">
-    <h1 property="name" id="wb-cont">Learn More</h1>
+    <h1 property="name">Learn More</h1>
   </div>
   <div class="col-md-12">
     <div class="wb-tabs ignore-session" style="padding-top: 15px">
@@ -138,13 +138,13 @@ permalink: /en/index.html
             ...
           </p>
         </details>
-        <details id="details-panel20">
+        <details id="details-panel30">
           <summary>Our Partners</summary>
           <p>
             ...
           </p>
         </details>
-        <details id="details-panel20">
+        <details id="details-panel40">
           <summary>Contact Us</summary>
           <p>
             ...
