change the contents of osc - oss and open standards

--- a/_pages/fr/index.html
+++ b/_pages/fr/index.html
@@ -16,56 +16,142 @@ permalink: /fr/index.html
   </div>
 </div>
 
-<div class="row">
-  <section class="col-md-8 pull-left">
-    <h2>Services et renseignements</h2>
-    <div class="wb-eqht row">
-      <div class="col-md-6">
-        <section>
-          <h3><a href="{{ site.data.i18n.general.nav.code.link[page.lang] }}">{{ site.data.i18n.general.nav.code[page.lang] }}</a></h3>
-          <p>Effectuez des recherches dans les projets libres et dépôts de code des administrations publiques Canadiennes, accédez le code et les logiciels, et contribuer au développement en cours.</p>
-        </section>
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name">Services</h1>
+    <p>The Open Resource Exchange includes four main services that focus on sharing solutions in an open source format. The term open source refers to pubilically accessible items that are freely available for use.</p>
+  </div>
+
+  <div class="col-md-4">
+    <section class="panel panel-info">
+
+      <header class="panel-heading">
+        <a href="./code-source-ouvert.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Code source ouvert</h5></a>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 33px !important">
+        <div class="col-md-3" style="color: #31708f; font-size: 50px">
+          <a href="./code-source-ouvert.html" style="color: inherit !important; text-decoration: none !important"><i class="fas fa-code"></i></a>
+        </div>
+        <div class="col-md-9">
+          <p>Recherchez des projets source ouverts et des répertoires de code.</p>
+        </div>
       </div>
 
-      <div class="col-md-6">
-        <section>
-          <h3><a href="{{ site.data.i18n.general.nav.oss.link[page.lang] }}">{{ site.data.i18n.general.nav.oss[page.lang] }}</a></h3>
-          <p>Effectuez des recherches dans les logiciels libres utilisés par les administrations publiques Canadiennes, promouvez la collaboration et la réutilisation de solutions préférées.</p>
-        </section>
+    </section>
+  </div>
+
+  <div class="col-md-4">
+    <section class="panel panel-success">
+      <header class="panel-heading">
+        <a href="./logiciels-libres.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Logiciels libres</h5></a>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 0px !important">
+        <div class="col-md-3" style="color: #3c763d; font-size: 50px">
+          <a href="./logiciels-libres.html" style="color: inherit !important; text-decoration: none !important"><i class="fa fa-cog"></i></a>
+        </div>
+        <div class="col-md-9">
+          <p>Recherchez les plateformes de logiciels libres utilisés par les administrateurs publiques canadiens.</p>
+        </div>
       </div>
 
-      <div class="col-md-6">
-        <section>
-          <h3><a href="{{ site.data.i18n.general.nav.standards.link[page.lang] }}">{{ site.data.i18n.general.nav.standards[page.lang] }}</a></h3>
-          <p>Effectuez des recherches dans les normes ouvertes utilisés par les administrations publiques Canadiennes.</p>
-        </section>
+    </section>
+  </div>
+
+  <div class="col-md-4">
+    <section class="panel panel-warning">
+
+      <header class="panel-heading">
+        <a href="./normes-ouvertes.html" style="color: inherit !important; text-decoration: none !important"><h5 class="panel-title">Normes ouvertes</h5></a>
+      </header>
+
+      <div class="panel-body" style="padding-bottom: 33px !important">
+        <div class="col-md-3" style="color: #8a6d3b; font-size: 50px">
+          <a href="./normes-ouvertes.html" style="color: inherit !important; text-decoration: none !important"><i class="glyphicon glyphicon-list-alt"></i></a>
+        </div>
+        <div class="col-md-9">
+          <p>Recherchez les normes ouvertes utilisées par les administrateurs publiques canadiens.</p>
+        </div>
       </div>
 
-      <div class="col-md-6">
-        <section>
-          <h3><a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a></h3>
-          <p>Découvrez comment contribuer en utilisant un schéma de métadonnées standard pour chaque service.</p>
-        </section>
-      </div>
+    </section>
+  </div>
+</div>
 
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name">Documentation</h1>
+  </div>
+
+  <div class="col-md-12">
+
+    <ul class="list-unstyled">
+      <li>
+        <details open>
+          <summary>Comment utiliser la plateforme Échange de Ressources Ouvert</summary>
+            La plateforme Échange de Ressources Ouvert offre trois services basés sur le partage de solutions numériques ouvertes en provenance des différentes administrations publiques canadiennes.
+            Consultez le guide sur <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour vous aider à trouver des solutions ouvertes et à partager de nouveaux projets.
+        </details>
+      </li>
+      <li>
+        <details open>
+          <summary>Liste des répertoires par administration publique </summary>
+            Les administrations publiques canadiennes utilisent des répertoires sur GitHub, GitLab, Bitbucket ou tout autre service en ligne pour héberger les projets ouverts qu’ils ont développés.
+            Consultez la <a href="./code-source-ouvert-groupes.html">liste des répertoires par administration publique</a> pour trouver le(s) répertoire(s) d’hébergement de chacune des administrations publiques selon son niveau de gouvernement (fédéral, provincial, municipal ou autochtone).
+        </details>
+      </li>
+    </ul>
+
+  </div>
+</div>
+
+<div class="row profile">
+  <div class="col-md-12">
+    <h1 property="name">Apprendre davantage</h1>
+  </div>
+  <div class="col-md-12">
+    <div class="wb-tabs ignore-session" style="padding-top: 15px">
+      <div class="tabpanels">
+        <details id="details-panel10">
+          <summary>À propos de nous</summary>
+          <div class="col-md-1">
+            <i class="fas fa-users" style="font-size:48px;"></i>
+          </div>
+          <div class="col-md-11">
+            <p>
+              The Open Resource Exchange was developed by the City of Montreal in collaboration with the Government of Canada and the City of
+              Edmonton. It provides a platform for sharing innovative ideas across all levels of government in Canada. This resource platform creates a
+              gathering space for ‘open source’ ideas across Canada. It enables public administrators to:
+            </p>
+            <ul>
+              <li><b>Share</b> open source solutions that can be replicable across Canada.</li>
+              <li><b>Download</b> working open source solutions and execute in new environments.</li>
+              <li><b>Contribute</b> to existing open source solutions.</li>
+              <li><b>Learn about open</b> source standards, software and documentation.</li>
+            </ul>
+          </div>
+        </details>
+        <details id="details-panel20">
+          <summary>Nos objectifs</summary>
+          <p>
+            ...
+          </p>
+        </details>
+        <details id="details-panel30">
+          <summary>Nos partenaires</summary>
+          <p>
+            ...
+          </p>
+        </details>
+        <details id="details-panel40">
+          <summary>Contactez-nous</summary>
+          <p>
+            ...
+          </p>
+        </details>
+      </div>
     </div>
-  </section>
-
-  <div class="col-md-4 col-xs-12 pull-right">
-    <section class="lnkbx">
-      <h2>Derniers codes source ouverts</h2>
-      {% include codeLastUpdated.html %}
-    </section>
-
-    <section class="lnkbx">
-      <h2>Groupe de travails en vedettes</h2>
-      <ul>
-        <li><a href="https://gccollab.ca/groups/profile/5911">Groupe Logiciels libres sur GCcollab</a></li>
-        <li><a href="#">[Nom du groupe de travail]</a></li>
-        <li><a href="#">[Nom du groupe de travail]</a></li>
-      </ul>
-    </section>
-
   </div>
 </div>
 
