--- a/_pages/en/open-standards.html
+++ b/_pages/en/open-standards.html
@@ -6,11 +6,18 @@ permalink: /en/open-standards.html
 ---
 
 <h1 property="name" id="wb-cont">Open Standards</h1>
-<p>Canadian public administrations' open standards.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-standards-schema.html">Open Standards Metadata Schema</a> for the list of fields and how to add your data.</p>
+<p>
+  Open standards refer to file formats, protocols and application interfaces that can be implemented by everyone.
+  The standard specification is publically available and the standardization is open and transparent.
+</p>
+
+<h2 property="name">Software Projects</h2>
+<p>
+  Search open standards that are used by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
+  You may also add a new open standard to the following catalog, or update the information of a standard that is already there, using the <a href="./open-standards-form.html">Open Standards Form</a>.<br>
+  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+</p><br>
 
 {% include standardsTable.html %}
 
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on open standards used in Canadian federal, provincial, territorial and municipal administrations. Data is also available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a>.</p>
-<p>You can use the <a href="./open-standards-form.html">Open Standards Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../normes_ouvertes-open_standards.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
