Fixing error in hyperlinks

--- a/_pages/fr/docs.html
+++ b/_pages/fr/docs.html
@@ -136,7 +136,7 @@ permalink: fr/docs.html
   </code>
 </pre>
 
-<p>Pour plus d'informations, cliquez <a href="./logiciels-libres-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert.</p>
+<p>Pour plus d'informations, cliquez <a href="./logiciel-libre-schema.html">ici</a> pour voir le schéma de métadonnées pour le code source ouvert.</p>
 
 <h4 id="Votre_logiciel_open_source_doit_etre_ajoute">Votre logiciel open source doit être ajouté</h4>
 <p>
