--- a/_pages/fr/logiciel-libre-formulaire.html
+++ b/_pages/fr/logiciel-libre-formulaire.html
@@ -8,4 +8,4 @@ id: software
 ---
 
 <h1 property="name" id="wb-cont">Formulaire avec validation de logiciels libres ouverts</h1>
-<p>Appuyez <a href="logiciels-libres-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouverts.</p>
+<p>Appuyez <a href="logiciel-libre-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouverts.</p>
