update oss form according to new design

--- a/_pages/fr/logiciel-libre-formulaire.html
+++ b/_pages/fr/logiciel-libre-formulaire.html
@@ -6,5 +6,5 @@ permalink: /fr/logiciel-libre-formulaire.html
 config: config-software
 ---
 
-<h1 property="name" id="wb-cont">Formulaire avec validation de logiciels libres ouverts</h1>
-<p>Appuyez <a href="logiciel-libre-schema.html">ici</a> pour en savoir plus sur le schéma de métadonnées pour les logiciels libres ouverts.</p>
+<h1 property="name" id="wb-cont">Formulaire du logiciel libre</h1>
+<p>Remplissez ce formulaire pour ajouter ou modifier des données sur les plateformes de logiciels libres utilisés par les administrations publiques Canadiennes.</p>
