Update introduction in source-ouvert-formulaire.html page

--- a/_pages/fr/code-source-ouvert-formulaire.html
+++ b/_pages/fr/code-source-ouvert-formulaire.html
@@ -7,4 +7,4 @@ config: config-code
 ---
 
 <h1 property="name" id="wb-cont">Formulaire du code source ouvert</h1>
-<p>Remplissez ce formulaire pour ajouter ou mettre à jour des informations des projets source ouvert et les répertoires de code réalisés par les administrations publiques canadiennes.</p>
+<p>Remplissez ce formulaire pour ajouter ou modifier des données sur les projets code source ouvert élaborés par les administrations publiques Canadiennes.</p>
