--- a/_pages/en/open-source-codes.html
+++ b/_pages/en/open-source-codes.html
@@ -6,12 +6,19 @@ permalink: /en/open-source-codes.html
 ---
 
 <h1 property="name" id="wb-cont">Open Source Code</h1>
-<p>Canadian public administrations' open source projects and code repositories.</p>
-<p>See the list of <a href="./open-source-code-groups.html">Open Source Code Groups</a> to find more Canadian public administrations' open source projects and code repositories.</p>
-<p>See the <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> and <a href="./open-source-code-schema.html">Open Source Code Metadata Schema</a> for the list of fields and how to add you data.</p>
+<p>
+  Open source code commonly refers to software that uses an open development process. This software is released under a license where
+  the copyright holder grants anyone permission to use, modify, change or redistribute the code for any purpose. This open source process
+  is an example of open collaboration where everyone benefits from the development of technology that solves real issues.
+</p>
+
+<h2 property="name">Software Projects</h2>
+<p>
+  Search open projects that are developed by different levels of Canadian public administrations (federal, provincial, municipal and aboriginal).
+  You may also add a new open source code to the following catalog, or update the information of a code that is already there, using the <a href="./open-source-code-form.html">Open Source Code Form</a>.<br>
+  <strong>Need help?</strong> Check our user guide on <a href="./ore-docs.html">how to use the Open Resource Exchange platform</a> for more information on how you can benefit from this service.
+</p><br>
 
 {% include codeTable.html %}
 
-<p>The data used to generate this list is hosted on <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Create Pull Requests to add or update information on Canadian federal, provincial, territorial and municipal administrations Open Source Code.</p>
-<p>You can use the <a href="./open-source-code-form.html">Open Source Code Form</a> to update existing data.</p>
 <p>Data is also made available in <a href="../code.json" target="_blank">JSON format</a> for open data and use in other applications.</p>
