--- a/_pages/fr/normes-ouvertes.html
+++ b/_pages/fr/normes-ouvertes.html
@@ -6,11 +6,17 @@ permalink: /fr/normes-ouvertes.html
 ---
 
 <h1 property="name" id="wb-cont">Normes ouvertes</h1>
-<p>Standards libres des administrations publiques Canadiennes.</p>
-<p>Consultez la <a href="{{ site.data.i18n.general.nav.doc.link[page.lang] }}">{{ site.data.i18n.general.nav.doc[page.lang] }}</a> et le <a href="./norme-ouverte-schema.html">Schéma de métadonnées des normes ouvertes</a> pour la liste des champs et comment ajouter vos données.</p>
+<p>
+  Une norme ou standard ouvert réfère à tout format de données interopérable et tout protocole de communication, d’interconnexion ou d’échange dont les spécifications techniques sont publiques sans aucune restriction d’accès ou de mise en oeuvre.
+</p>
+
+<h2 property="name">Projets</h2>
+<p>
+  Consultez la liste des normes ouvertes utilisées par les administrations publiques canadiennes du niveau fédéral, provincial, municipal et autochtone.
+  Vous pouvez modifier les informations d’une norme existante dans la liste ou ajouter une nouvelle norme ouverte en soumettant le <a href="./norme-ouverte-formulaire.html">Formulaire des Normes Ouvertes</a>.<br>
+  <strong>Besoin d’aide?</strong> Consulter la documentation <a href="./ero-docs.html">comment utiliser la plateforme Échange de Ressources Ouvert</a> pour plus d’informations sur comment bénéficier de ce service.
+</p><br>
 
 {% include standardTable.html %}
 
-<p>Les données utilisées pour générer cette liste est hébergé sur <a href="https://github.com/canada-ca/ore-ero/tree/master/_data" target="_blank">GitHub</a>. Créez des <i>Pull Requests</i> pour ajouter ou mettre à jour de l'information sur les normes ouvertes utilisés par les administrations fédérale, provinciales, territoriales et municipales du Canada.</p>
-<p>Vous pouvez utiliser le <a href="./norme-ouverte-formulaire.html">Formulaire des normes ouvertes</a> pour mettre à jours des données existantes.</p>
 <p>Les données sont aussi disponible en <a href="../standard.json" target="_blank">format JSON</a>.</p>
